# image_downloader

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/cli/: commands.py
src/config/: config.py
src/domain/: entities.py
src/infrastructure/database/: init_db.py
src/repositories/: base.py  in_memory.py  postgres.py
src/services/: base.py  download.py  google.py  proccess.py
src/use_cases/: query_image.py
src/utils/: logger.py
tests/unittests/: test_image_model.py
