[tool.poetry]
name = "image-downloader"
version = "0.1.0"
description = "A CLI tool to download and store images based on search queries"
authors = ["oldcorvus <moelcrow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"
asyncpg = "^0.30.0"
aiohttp = "^3.10.10"
pillow = "^11.0.0"
pydantic-settings = "^2.6.0"
click = "^8.1.7"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
